@@ -5,6 +5,11 @@ These are some of the changes that have occured in CGIWrap from version
 to version.
 
 <HR>
+<P><H3>New since version 3.6.3:</H3></UL>
+	<LI>Fixed netmask comparison
+	<LI>Added anonymous CVS server info
+</UL>
+
 <P><H3>New in version 3.6.3:</H3><UL>
 	<LI>Added support for checking if user has a valid shell, similar to 
 what ftpd does. The BSD licensed getusershell.o has been included for support
